Removed env variable, fixed mobile horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -41,34 +41,19 @@ h4 {
 
 .hero-iframe {
   position: absolute;
-  top: -60px;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 56.25vw;
+  min-height: 100vh;
   z-index: -2;
-}
-
-/* Large screens */
-@media (max-width: 1279px) {
-  .hero-iframe {
-    top: -80px;
-    width: 110%;
-  }
-}
-
-/* Medium screens */
-@media (max-width: 1023px) {
-  .hero-iframe {
-    top: -50px;
-    width: 130%;
-  }
+  object-fit: cover;
 }
 
 /* Small screens */
 @media (max-width: 640px) {
   .hero-iframe {
-    top: -45px;
-    left: -100px;
     width: 230%;
   }
   .custom-height {
